--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <title>Modal window</title>
-    <script src="script.js defer"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <button class="show-modal">Show modal 1</button>
